Add maber.io logo to background behind fluid effect

--- a/fluid-sim/style.css
+++ b/fluid-sim/style.css
@@ -9,11 +9,29 @@ body {
     background-color: #000000; /* Deep black background */
 }
 
+.logo-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 0;
+}
+
+#logo {
+    max-width: 60%;
+    max-height: 60%;
+    object-fit: contain;
+}
+
 #fluid-canvas {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: 1;
 }
